# KiKit

./: .gitattributes  .gitignore  Dockerfile  DockerfileM1Mac  LICENCE  MANIFEST.in  Makefile  README.md  latest  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  versions.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.yml
doc/: cli.md  examples.md  fabrication.md  faq.md  installation.md  macosInstallation.md  multiboard.md  panelization.md  panelizeCli.md  panelizeGui.md  plugins.md  present.md  scripting.md  stencil.md  understandingTabs.md
docs/: acknowledgements.md  cli.md  faq.md  index.md  multiboard.md  present.md  stencil.md
kikit/: __init__.py  _version.py  annotations.py  common.py  defs.py  doc.py  drc.py  drc_ui.py  eeschema.py  eeschema_v6.py  eeshema.py  export.py  export_ui.py  fab_ui.py  info.py  intervals.py  kicadUtil.py  modify.py  modify_ui.py  panelize.py  panelize_ui.py  panelize_ui_impl.py  panelize_ui_sections.py  partition_line.py  pcbnew_compatibility.py  pcbnew_utils.py  plugin.py  present.py  present_ui.py  project.py  sexpr.py  stencil.py  stencil_ui.py  substrate.py  text.py  typing.py  ui.py  units.py
kikit/fab/: common.py  (+7 more)
latest/: 404.html  index.html
scripts/: InstallMacPorts.bash  exampleDoc.py  exampleScripting.py  installMacOS.bash  panelizeDoc.py  registerPlugin.sh  setJson.py
upstream/: 404.html  index.html  sitemap.xml
v1.3/: 404.html  index.html  sitemap.xml
v1.4/: 404.html  sitemap.xml
v1.5/: 404.html
v1.8/: 404.html  index.html
(+249 files in other folders)
