[tool.poetry]
name = "KiKit"
version = "0.3.0"
description = "Automation for KiCAD boards"
authors = ["Jan Mrázek <email@honzamrazek.cz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.2.1"
numpy = "^1.18.3"
shapely = "^1.7.0"
click = "^7.1.1"
markdown2 = "^2.3.8"
pybars3 = "^0.9.7"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pylint = "^2.4.4"
pytest-mock = "^3.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
